--- a/lib/magic_recipes/templates/nginx_passenger.erb
+++ b/lib/magic_recipes/templates/nginx_passenger.erb
@@ -1,5 +1,5 @@
 server {
-	listen 80;
+	listen 80<%= ' default deferred' if default_site %>;
 	server_name <%= domains.join("\n                ") %>;
 	
 	root   <%= current_path %>/public;
@@ -22,6 +22,6 @@ server {
 	error_page 500 502 503 504 /500.html;
 	client_max_body_size 4G;
 }
-
+<%= if pre_start %>
 passenger_pre_start http://<%= domains.first %>/;
-
+<% end %>
