--- a/lib/magic_recipes/templates/thin_private_pub_yml.erb
+++ b/lib/magic_recipes/templates/thin_private_pub_yml.erb
@@ -12,7 +12,7 @@ max_conns: 1024
 max_persistent_conns: 512
 require: []
 wait: 90
-servers: <%= private_pub_instances %>
+servers: 1<%#= private_pub_instances %>
 user: <%= user %>
 socket: /tmp/thin.<%= app_name %>.pp.sock
 daemonize: true
