--- a/lib/generators/magic_recipes/templates/deploy.rb.tt
+++ b/lib/generators/magic_recipes/templates/deploy.rb.tt
@@ -54,6 +54,11 @@ set :rails_env,     "production"                            #=> Rails environmen
 # => # set :git_enable_submodules, 1                            #=> Git submodules
 
 
+# SqLite3 ... this is more for test & try pupose (save .sqlite and copy to current after deploy)
+set :sqlite_path,     "#{ deploy_to }/shared/db/"               #=> shared path for db
+set :sqlite_db,       "#{ rails_env.downcase.strip }"           #=> sqlite name
+
+
 # if you want to clean up old releases on each deploy uncomment this:
 # => set     :keep_releases,     3
 # => after   "deploy:restart",   "deploy:cleanup" 
@@ -63,7 +68,7 @@ set :rails_env,     "production"                            #=> Rails environmen
 #   Usage:
 #   magic_recipes :rvm, :nginx, :private_pub, :thin
 #   available:
-#   :rvm, :rbenv, :nginx, :private_pub, :thin, :passenger, :unicorn, :assets, :gems
+#   :rvm, :rbenv, :nginx, :private_pub, :thin, :passenger, :unicorn, :assets, :gems, :sqlite, :db
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 magic_recipes :rvm, :nginx, :private_pub, :thin
