--- a/lib/magic_recipes/templates/postgresql.yml.erb
+++ b/lib/magic_recipes/templates/postgresql.yml.erb
@@ -1,8 +1,8 @@
-production:
+<%= rails_env %>:
   adapter: postgresql
   encoding: unicode
   database: <%= postgresql_database %>
-  pool: 5
+  pool: <%= postgresql_pool %>
   username: <%= postgresql_user %>
   password: <%= postgresql_password %>
   host: <%= postgresql_host %>
