--- a/lib/generators/magic_recipes/templates/git_cap.tt
+++ b/lib/generators/magic_recipes/templates/git_cap.tt
@@ -5,30 +5,36 @@
 # ./git_cap gitusr gitpwd
 # -------------------------------------------------------------------------
 # set Variables
-set g_user [lrange $argv 0 0] 
-set g_pwd [lrange $argv 1 1]   
+set g_user [lrange $argv 0 0]
+set g_pwd [lrange $argv 1 1]
+set ulook ".?sername for 'https:\/\/github\.com':.*"
+set plook ".?assword for .*@github\.com':.*"
 set timeout -1   
+
+# 
+# Regular Expressions http://docs.activestate.com/activetcl/8.5/expect4win/regex.html
+# 
 
 spawn cap deploy
 match_max 100000
 
 # Look for user prompt
-expect "*?sername:*"
+expect -re $ulook
 send -- "$g_user\r"
 send -- "\r"
 
 # Look for passwod prompt
-expect "*?assword:*"
+expect -re $plook
 send -- "$g_pwd\r"
 send -- "\r"
 
 # Look for user prompt
-expect "*?sername:*"
+expect -re $ulook
 send -- "$g_user\r"
 send -- "\r"
 
 # Look for passwod prompt
-expect "*?assword:*"
+expect -re $plook
 send -- "$g_pwd\r"
 send -- "\r"
 
