--- a/lib/generators/magic_recipes/templates/deploy.rb.tt
+++ b/lib/generators/magic_recipes/templates/deploy.rb.tt
@@ -14,7 +14,9 @@ set :deploy_to,     "/home/deploy/apps/#{application}"      #=> deploy path
 set :rails_env,     "production"                            #=> Rails environment
 
 # => set :use_sudo,      true
-# => set :put_via,       :scp                                    # => :sftp | :scp
+# => set :put_via,       :scp                               # => :sftp | :scp
+
+# => ssh_options[:port] = 23                                # => SSHPort
 
 # rvm variables:
 # => set :rvm_ruby,             '1.9.3'                     #=> Ruby version
